@@ -1,3 +1,6 @@
+Upcoming:
+- Moved the Parameter class from RFToolsControl to the API
+
 1.18-3.0.10:
 - Fixes for latest Patchouli from jeremiahwinsley
 
